done settings & api key

--- a/src/app/components/detailed.component.html
+++ b/src/app/components/detailed.component.html
@@ -1,1 +1,3 @@
-<p>detailed works!</p>
+<mat-card class="mlr-3 mt-1 mb-1 border-black" fxLayoutAlign="end">
+    <button type="button" mat-raised-button color="primary" [routerLink]="['/']">Back</button>
+</mat-card>
