--- a/src/app/components/settings.component.html
+++ b/src/app/components/settings.component.html
@@ -1,1 +1,16 @@
-<p>settings works!</p>
+<mat-card class="mlr-3 mt-1 mb-1 border-black" fxLayout="row" fxLayoutAlign="space-between center">
+    <mat-card-title>Settings</mat-card-title>
+    <button type="button" mat-raised-button color="primary" [routerLink]="['/']">Back</button>
+</mat-card>
+<mat-card class="m-1 border-black" fxLayout="row" fxLayoutAlign="space-between center">
+    <form [formGroup]="_form" fxLayout="column" fxFill (ngSubmit)="saveKey()">
+        <mat-form-field appearance="outline">
+            <input matInput formControlName="apikey" placeholder="Please enter your API key.">
+            <mat-error>Enter a valid key.</mat-error>
+        </mat-form-field>
+        <div fxLayout="row" fxLayoutAlign="end">
+            <button type="submit" class="mr-1" [disabled]="_form.invalid" mat-raised-button color="accent">Save</button>
+            <button type="button" (click)="deleteKey()" mat-raised-button color="warn" [disabled]="_form.invalid">Delete</button>
+        </div>
+    </form>
+</mat-card>
