--- a/src/app/components/main.component.html
+++ b/src/app/components/main.component.html
@@ -1,1 +1,4 @@
-<p>main works!</p>
+<mat-card class="mlr-3 mt-1 mb-1 border-black" fxLayout="row" fxLayoutAlign="space-between center">
+    <mat-card-title>Main</mat-card-title>
+    <button type="button" mat-raised-button color="primary" [routerLink]="['settings']">Settings</button>
+</mat-card>
