--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,66 @@
 /* You can add global styles to this file, and also import other style files */
-
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgb(206, 206, 206);}
+
+.hover:hover {
+    background-color: rgb(166, 170, 173);
+}
+
+.m-1 {
+    margin: 1rem !important;
+}
+.ml-1 {
+    margin-left: 1rem !important;
+}
+.mr-1 {
+    margin-right: 1rem !important;
+}
+.mt-1 {
+    margin-top: 1rem !important;
+}
+.mb-1 {
+    margin-bottom: 1rem !important;
+}
+.mlr-3 {
+    margin-left: 3rem !important;
+    margin-right: 3rem !important;
+}
+
+.p-1 {
+    padding: 1rem !important;
+}
+.p-0-5 {
+    padding: 0.5rem !important;
+}
+.p-0 {
+    padding: 0px !important;
+}
+
+.lg-text {
+    font-size: 1rem;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.border-red {
+    border-collapse: collapse;
+    border: solid red 3px;
+}
+.border-green {
+    border-collapse: collapse;
+    border: solid green 3px;
+}
+.border-blue {
+    border-collapse: collapse;
+    border: solid blue 3px;
+}
+.border-white {
+    border: solid white 3px;
+    border-collapse: collapse;
+}
+.border-black {
+    border: solid black 3px;
+    border-collapse: collapse;
+}
