detailed component groundwork

--- a/src/app/components/detailed.component.html
+++ b/src/app/components/detailed.component.html
@@ -1,3 +1,16 @@
-<mat-card class="mlr-3 mt-1 mb-1 border-black" fxLayoutAlign="end">
-    <button type="button" mat-raised-button color="primary" [routerLink]="['/']">Back</button>
+<mat-card class="mlr-3 mt-1 mb-1 border-black" fxLayoutAlign="space-between">
+    <ng-container *ngIf="this.country">    
+        <div fxFlex="50" fxLayoutAlign="center center">
+            <p class="m-0">{{this.country.name}}</p>
+        </div>
+        <div fxLayoutAlign="start">
+            <img src="{{this.country.flag}}">
+            <button type="button" class="ml-1" mat-raised-button color="primary" [routerLink]="['/']">Back</button>
+        </div>
+    </ng-container>
+    <ng-container *ngIf="!this.country">
+        <div>
+            Please reload the app.
+        </div>
+    </ng-container>
 </mat-card>
