--- a/src/app/components/detailed.component.html
+++ b/src/app/components/detailed.component.html
@@ -14,3 +14,13 @@
         </div>
     </ng-container>
 </mat-card>
+<mat-card *ngFor="let i of articles" class="m-1 p-1" fxLayout="column">
+    <p>{{i.author}}</p>
+    <p>{{i.content}}</p>
+    <p>{{i.description}}</p>
+    <p>{{i.publishedAt}}</p>
+    <p>{{i.source.id}} {{i.source.name}}</p>
+    <p>{{i.title}}</p>
+    <img src="{{i.urlToImage}}">
+    <button mat-raised-button type="button"><a href="{{i.url}}" target="_blank">Read More</a></button>
+</mat-card>
