--- a/src/app/components/detailed.component.html
+++ b/src/app/components/detailed.component.html
@@ -16,11 +16,12 @@
 </mat-card>
 <mat-card *ngFor="let i of articles" class="m-1 p-1" fxLayout="column">
     <p>{{i.author}}</p>
-    <p>{{i.content}}</p>
     <p>{{i.description}}</p>
+    <p><em>{{i.content}}</em></p>
     <p>{{i.publishedAt}}</p>
     <p>{{i.source.id}} {{i.source.name}}</p>
     <p>{{i.title}}</p>
-    <img src="{{i.urlToImage}}">
+    <img fxFill src="{{i.urlToImage}}" (error)="changeSource($event)">
     <button mat-raised-button type="button"><a href="{{i.url}}" target="_blank">Read More</a></button>
+    <button type="button" mat-raised-button>Save article</button>
 </mat-card>
