added saving article function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="border-white" fxLayout="column" fxFill>
-  <mat-toolbar fxFlex="12" class="border-red" color="primary" fxLayout="row" fxLayoutAlign="space-between center">My News API</mat-toolbar>
-  <content fxFlex="88" class="border-green" fxLayout="column">
+<div fxLayout="column" fxFill>
+  <mat-toolbar fxFlex="12" color="primary" fxLayout="row" fxLayoutAlign="space-between center">My News API</mat-toolbar>
+  <content fxFlex="88" fxLayout="column">
     <router-outlet></router-outlet>
   </content>
 </div>
