--- a/src/app/components/main.component.html
+++ b/src/app/components/main.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column">
-    <mat-card class="mlr-3 mt-1 mb-1 border-black" fxLayout="row" fxLayoutAlign="space-between center">
+    <mat-card class="mlr-3 mt-1 mb-1" fxLayout="row" fxLayoutAlign="space-between center">
         <mat-card-title>Main</mat-card-title>
         <button type="button" mat-raised-button color="primary" [routerLink]="['settings']">Settings</button>
     </mat-card>
